--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -130,7 +130,8 @@ But what would be a new release without some new features? So here they
 \layout Itemize
 
 Added optional support for viewing and printing the HTML messages.
- Also added anoptional text-only viewer.
+ Also added an optional text-only viewer and a viewer bar to quickly change
+ the current viewer.
 \layout Itemize
 
 Added possibility to monitor a folder (or server) in the background justupdading
@@ -1150,25 +1151,127 @@ Obviously, the more of this manual you read, the better use you can make
 Getting started
 \layout Standard
 
-When you start Mahogany for the first time, it will present you with a rather
- lengthy configuration dialog where you can configure all kinds of more
- or less useful options.
- Don't be afraid of it - just make sure that the main points, notably the
- settings on the Identity (
-\begin_inset LatexCommand \ref{IdentityPage}
-
-\end_inset 
-
-) and Network (
-\begin_inset LatexCommand \ref{NetworkPage}
-
-\end_inset 
-
-) page are correct and ignore the rest for now.
- The defaults should be suitable for most situations.
+When you start Mahogany for the first time, it will first ask you to accept
+ the terms of its license.
+ Note that you must accept it to be able to use the program.
+ After doing it, you will see the installation wizard.
+ It will guide you through several pages whose purpose is to get the information
+ absolutely required for running the program and also prepare a useable
+ initial setup for you.
+ Please avoid abandoning the wizard unless you really know what you are
+ doing, so just click next and ignore the checkbox on the first page for
+ now.
 \layout Standard
 
-The main window will then show you a tree of folders (
+It is quite likely that you already have some other email program installed
+ on your computer.
+ Mahogany may import the configuration settings for some of them (currently,
+ Netscape Communicator, Pine and XFMail but we have plans to add support
+ for more programs in the future) meaning that it will provide your existing
+ settings as the default values in the next pages.
+ Of course, it is absolutely safe to just skip this step and continue directly.
+\layout Standard
+
+Next page asks you for your minimal personal information.
+ You may enter an empty personal name here if you wish (although it is better
+ to enter something) but it is required that you enter a valid email address
+ below.
+ It will be used as your default return email address.
+ Note that you will be able to change this address in the future in the
+ program prefernces dialog as well as add other identities, possibly with
+ different email addresses, later.
+\layout Standard
+
+The next page proposes you to setup some default servers.
+ Windows users 
+\series bold 
+must
+\series default 
+ specify an SMTP server here.
+ Under Unix you may leave it empty if you want to use a local MTA such as
+ 
+\noun on 
+sendmail
+\noun default 
+, 
+\noun on 
+qmail
+\noun default 
+ or
+\noun on 
+ exim.
+
+\noun default 
+ For the other servers you are free to enter the server name or leave the
+ entry empty if you don't want to use it.
+\layout Standard
+
+The following page is more interesting as it gives you the possibility to
+ configure some of the basic Mahogany options to your liking.
+ Let's consider them in order:
+\layout Itemize
+
+Collect new mail (Unix only): typically, new mail arrives into the system
+ 
+\noun on 
+Inbox
+\noun default 
+ folder on a Unix workstation.
+ It is strongly recommended that you don't leave it there but copy it immediatel
+y instead into your own mail folder.
+ Mahogany proposes to do this for you by default, please let it do it unless
+ you know better.
+\layout Itemize
+
+Use Trash mailbox: this should be self explanatory except that you should
+ note that this is just the global default setting and that it can be changed
+ later on folder per folder basis (i.e.
+ you can have some unimportant folders from which mail is deleted directly
+ but just move the more important messages from other folders.
+ which you might wish to undelete later, to the Trash).
+\layout Itemize
+
+Use Outbox: again, this should be clear but this is a global setting.
+ It can be changed later but it is probably worth setting it right from
+ the very beginning.
+ If you have a permanent net connection you probably don't need to use it.
+\layout Itemize
+
+Use dial-up network: Mahogany may bring up or down your Internet connection
+ for the dial up users.
+ This is a half-experimental feature and, as above, is not particularly
+ useful if have a permanent net connection
+\layout Itemize
+
+Mailbox format (Unix only): this allows you to select the format for the
+ local system mailbox files Mahogany is going to create soon (you will be
+ able to choose the format for the folders you create yourself when you
+ do it, of course).
+ The default is the MBX format which is by far the most efficient but it
+ is a binary format which is not understood by as many programs as the tradition
+al Berkeley MBOX format.
+\layout Standard
+
+After finishing with the previous page you are almost done - the last page
+ of the wizard doesn't have any more options.
+ It just proposes you to send a test email to the address you had entered
+ in the beginning (remember that it must have been a valid one?).
+ If you are absolutely sure that you made no mistakes or if you can't or
+ don't want to send mail currently, please uncheck the checkbox at the bottom
+ of the page.
+ Otherwise, let Mahogany do it as it might discover some problem with your
+ SMTP server.
+ In any case, you should now see the main Mahogany window which is described
+ in the main section in front of you and it means that Mahogany has been
+ successfully installed.
+ Congratulations!
+\layout Subsection
+
+The main window
+\layout Standard
+
+The main window is broken in three parts.
+ There is a tree of folders (
 \begin_inset LatexCommand \ref{FolderTreeCtrl}
 
 \end_inset 
@@ -1178,17 +1281,19 @@ The main window will then show you a tree of folders (
 
 \end_inset 
 
-) to the right of it.
- By default, you will find a small number of folders that Mahogany sets
- up for you, usually these are 
-\begin_inset Quotes eld
-\end_inset 
+) to the right of it which itself has two parts: the upper one shows the
+ list of all messages in the folder while the lower one shows the currently
+ previewed message.
+\layout Standard
 
-INBOX
-\begin_inset Quotes erd
-\end_inset 
+The installation wizard has created a small number of standard folders that
+ Mahogany uses itself.
+ Exactly which folders you now see on your screen depends, of course, on
+ the choices you have done in the wizard but it should be a subset of the
+ following list:
+\layout Itemize
 
-, 
+
 \begin_inset Quotes eld
 \end_inset 
 
@@ -1196,7 +1301,42 @@ SentMail
 \begin_inset Quotes erd
 \end_inset 
 
- and 
+: This folder is always created as Mahogany stores copies of the messages
+ you send in it.
+ You may tell Mahogany not to do it or save them in a different folder by
+ modifying the options near the top of the 
+\begin_inset Quotes eld
+\end_inset 
+
+Compose
+\begin_inset Quotes erd
+\end_inset 
+
+ page in the preferences dialog.
+\layout Itemize
+
+
+\begin_inset Quotes eld
+\end_inset 
+
+Trash
+\begin_inset Quotes erd
+\end_inset 
+
+: If you have chosen to use it in the wizard, this is the folder where the
+ deleted messages will be moved to.
+ The settings for using it can be found in the 
+\begin_inset Quotes eld
+\end_inset 
+
+Folders
+\begin_inset Quotes erd
+\end_inset 
+
+ page of the preferences dialog.
+\layout Itemize
+
+
 \begin_inset Quotes eld
 \end_inset 
 
@@ -1204,20 +1344,14 @@ New Mail
 \begin_inset Quotes erd
 \end_inset 
 
-.
- So, what are they? 
-\layout Itemize
-
-
-\begin_inset Quotes eld
-\end_inset 
-
-SentMail
-\begin_inset Quotes erd
-\end_inset 
-
- is obvious, Mahogany will store copies of messages that you send in there.
- 
+: This is the central new mail folder.
+ Under Unix the messages arriving into the system 
+\noun on 
+Inbox
+\noun default 
+ will be moved here.
+ Also, when you choose to collect mail from a remote POP3 or IMAP4 server
+ (see next subsection) it will be moved here as well.
 \layout Itemize
 
 
@@ -1228,7 +1362,7 @@ INBOX
 \begin_inset Quotes erd
 \end_inset 
 
- is a little more tricky, it represents the 
+ represents the 
 \begin_inset Quotes eld
 \end_inset 
 
@@ -1237,114 +1371,129 @@ system inbox
 \end_inset 
 
  for your system.
- This depends on your system setup, on Unix, it will most commonly be the
- 
+ You will only see it if you had chosen (in spite of multiple advices against
+ it) to not move new mail from it to the 
+\begin_inset Quotes eld
+\end_inset 
+
+New Mail
+\begin_inset Quotes erd
+\end_inset 
+
+ folder.
+ Exact location of this folder depends on your system setup but some common
+ locations are 
 \family typewriter 
 /var/spool/mail
 \family default 
  or 
 \family typewriter 
-/var/mail
-\family default 
- entry for you, or wherever new mail for you gets stored.
- If you have an existing 
-\family typewriter 
-mbox
-\family default 
- or 
-\family typewriter 
-INBOX
-\family default 
- mailfolder in your home directory, as created by some other mail software,
- it will refer to this.
- Generally, you don't need to worry about it, it will just be a black-box
- showing you new mail on the system you are logged in to.
- If it should not work, you can just create a folder entry for wherever
- the mail gets stored and ignore 
-\family typewriter 
-INBOX
-\family default 
-.
+/var/mail.
 \layout Itemize
 
+Server entries: you may also have entries for POP3, IMAP and NNTP folders
+ if you had specified them in the installation wizard.
+ They are described in details below.
+\layout Standard
 
-\begin_inset Quotes eld
+The folder view on the right should show only one or two messages right
+ now (unless you already had some mail in your 
+\noun on 
+Inbox
+\noun default 
+).
+ The first of them should be self-explanatory and the second, if any, is
+ the test message Mahogany has sent to test your configuration.
+ If you didn't disable this test but don't see this message in the folder,
+ something may have gone wrong.
+ Please look at the activity log window which Mahogany has also created
+ to see if there are any errors in it.
+ Also please see (
+\begin_inset LatexCommand \ref{Troubleshooting}
+
 \end_inset 
 
-New Mail
-\begin_inset Quotes erd
-\end_inset 
-
- is just a normal file folder, which is used by Mahogany to store mail that
- it collects from other places.
- By default, Mahogany will attempt to collect all new mail arriving in 
-\family typewriter 
-INBOX
-\family default 
- and move it to 
-\begin_inset Quotes eld
-\end_inset 
-
-New Mail
-\begin_inset Quotes erd
-\end_inset 
-
-, as it is considered bad practice to leave messages in the system spool
- area.
- Also, if you want to collect mail from more than one location, for example
- from your ISP's POP account, Mahogany will move it to 
-\begin_inset Quotes eld
-\end_inset 
-
-New Mail
-\begin_inset Quotes erd
-\end_inset 
-
-.
- It's just a convenient central place to store new messages, so you have
- them all in one folder, no matter where they come from.
- Of course, you can change this, if you don't like it.
- Whether Mahogany collects mail from a folder or not, can be set in the
- Properties dialog of the folder, accessible via a click with the right
- mouse button in the folder tree.
- If you try this, you will see, that Mahogany is set up to collect from
- 
-\begin_inset Quotes eld
-\end_inset 
-
-INBOX
-\begin_inset Quotes erd
-\end_inset 
-
-, but not from 
-\begin_inset Quotes eld
-\end_inset 
-
-SentMail
-\begin_inset Quotes erd
-\end_inset 
-
-.
- Good.
+) section.
 \layout Subsection
 
-So how about setting up POP access? And what is IMAP?
+How to configure POP and IMAP folders?
 \layout Standard
 
-Setting up POP access is dead easy: You simply click the right mouse button
- in the folder tree and select 
+Although the installation wizard did create entries for POP and/or IMAP
+ servers in the folder, they are probably not very useful right now.
+ Or maybe you didn't create them then and want to do it now - then just
+ choose 
 \begin_inset Quotes eld
 \end_inset 
 
-Create new folder
+Create
+\begin_inset Quotes erd
+\end_inset 
+
+ item from the 
+\begin_inset Quotes eld
+\end_inset 
+
+Folder
+\begin_inset Quotes erd
+\end_inset 
+
+ menu and follow the instructions.
+ If you are already fed up with the wizards you may prefer to dismiss it
+ on the first page by selecting the checkbox there and enter all the folder
+ parameters directly in the folder properties dialog.
+\layout Standard
+
+If you have let the wizard create the folder, you still need to use the
+ folder properties dialog to customize it.
+ By the way, this dialog can be accessed by selecting the corresponding
+ item either from the 
+\begin_inset Quotes eld
+\end_inset 
+
+Folder
+\begin_inset Quotes erd
+\end_inset 
+
+ menu in the menu bar or from the popup menu you obtain by right-clicking
+ the folder in the tree.
+\layout Standard
+
+Browse this dialog to get an idea of some of the options you may change.
+ Please note that most of the options in the first, 
+\begin_inset Quotes eld
+\end_inset 
+
+Access
+\begin_inset Quotes erd
+\end_inset 
+
+, page cannot be changed after the folder creation.
+ The different options are described in more details elsewhere in this manual.
+\layout Standard
+
+Right now let us just give some examples of the typical configurations:
+\layout Enumerate
+
+Typical POP3 server: normally, the new mail is downloaded from the POP3
+ folders locally so go to the 
+\begin_inset Quotes eld
+\end_inset 
+
+New Mail
+\begin_inset Quotes erd
+\end_inset 
+
+ page and select 
+\begin_inset Quotes eld
+\end_inset 
+
+Collect new mail from this folder
 \begin_inset Quotes erd
 \end_inset 
 
 .
- Then fill in the details: your username and password for accessing the
- account and the hostname of the POP server.
- Optionally you can enter a port number after a colon.
- By default, Mahogany will collect all mail from here and move it to 
+ This will move all new mail from the POP3 server to the 
 \begin_inset Quotes eld
 \end_inset 
 
@@ -1352,41 +1501,44 @@ New Mail
 \begin_inset Quotes erd
 \end_inset 
 
- automatically.
- If you don't want this (i.e.
- you prefer to leave the messages on server or maybe only move some of them
- to 
+ folder.
+ If you want to copy it instead just check the 
 \begin_inset Quotes eld
 \end_inset 
 
-New Mail
+Leave mail on this server
 \begin_inset Quotes erd
 \end_inset 
 
- selectively using filters), clear the 
+ checkbox as well.
+ Finally, if you want Mahogany to check the POP3 folder for the updates
+ automatically please check the 
 \begin_inset Quotes eld
 \end_inset 
 
-Collect all mail
+Permanently monitor this folder
 \begin_inset Quotes erd
 \end_inset 
 
- checkbox.
- Note that the default behaviour works better in most cases and that it
- is impossible to remember the status of the messages on a POP3 server so
- if you do leave on it, they will always appear as new, even if you had
- already seen them before.
-\layout Subsubsection
+ checkbox and change the polling interval for it if needed.
+\layout Enumerate
 
-IMAP - what's that?
-\layout Standard
+IMAP server with only INBOX: if you only have INBOX folder on your IMAP
+ server you may configure it exactly as the POP3 server above.
+ You may also decide not to collect mail from it but read it directly on
+ the server - this is, in fact, the preferred mode of operation as this
+ works much better with IMAP than with POP.
+\layout Enumerate
 
-IMAP is POP's big brother.
- Faster, more powerful and better, even more secure.
- If your ISP supports it, use IMAP rather than POP, your phone bills will
- go down, too.
- It's really just a different protocol for accessing the folder, but can
- do a few fancy things, more about that later.
+IMAP server with multiple folders: in this case you almost surely don't
+ want to download all new mail from the IMAP INBOX to the local folders
+ but keep it on server.
+ You will probably be interested in using filters (
+\begin_inset LatexCommand \ref{Filters}
+
+\end_inset 
+
+) in this case.
 \layout Subsection
 
 How to set up your mail accounts
@@ -1399,7 +1551,7 @@ How to set up your mail accounts
 Setting up Mahogany, its configuration files
 \layout Subsection
 
-User configuration files
+User configuration files (Unix only)
 \layout Standard
 
 When run for the first time, 
@@ -1437,6 +1589,22 @@ to the
  section of the configuration file.
  This will cause all values which are used to be written to the configuration
  file.
+\layout Standard
+
+Note that an easy way to 
+\begin_inset Quotes eld
+\end_inset 
+
+reinstall
+\begin_inset Quotes erd
+\end_inset 
+
+ Mahogany is to move 
+\family typewriter 
+$HOME/.M/config 
+\family default 
+file to some other location or even delete it and restart Mahogany - then
+ it will go through the installation process once again.
 \layout Subsection
 
 System wide configuration file
@@ -1553,15 +1721,7 @@ folder
 \end_inset 
 
 .
- The dialog has (when the user level is set to 
-\begin_inset Quotes eld
-\end_inset 
-
-novice
-\begin_inset Quotes erd
-\end_inset 
-
-) three tabs, 
+ The dialog has several pages which include at least: 
 \series bold 
 Access
 \series default 
@@ -1572,7 +1732,11 @@ Access
 
 ), 
 \series bold 
-Compose
+New Mail
+\series default 
+ ()
+\series bold 
+, Compose
 \series default 
  (
 \begin_inset LatexCommand \ref{ComposePage}
@@ -1667,23 +1831,26 @@ For those folder types where it is required, you can specify the password
  here.
  If you leave it empty, Mahogany will prompt you for the password whenever
  it is needed.
- If you want to auto-collect mail from this folder, you should really specify
- it.
+ If you want to auto-collect mail from this folder or even just check it
+ in the background, you should specify it, otherwise you will be asked for
+ it at least once per session (you will be able to tell Mahogany if it should
+ keep it for the session duration or not).
  
 \series bold 
-This is a potential security risk!
+Note that storing passwords is a potential security risk!
 \series default 
- The password typed in here will get stored in your $HOME/.M/config configuration
- file on Unix or in the registry on Windows.
+ The password typed in here will get stored in your 
+\family typewriter 
+$HOME/.M/config
+\family default 
+ configuration file on Unix or in the registry on Windows.
  While this file will be created as only readable by you and the passwords
  be encrypted (using very weak encryption), it is nevertheless a certain
  risk.
  If you accidentally change the permissions of that file, someone else could
  obtain your passwords, though Mahogany would detect this the next time
  it starts and warn you about it.
- Generally this should not pose a problem, but you should be aware of this.
- Previous versions of Mahogany had the passwords world-readable, so if you
- used it before this release, you might want to change them.
+ 
 \layout Itemize
 
 
@@ -1695,6 +1862,8 @@ Server
 For the folders which require a server setting, you can specify the server
  host here.
  If unspecified they will inherit the setting from the global preferences.
+ You may use a colon (:) after the server name to specify a non default
+ port.
 \layout Itemize
 
 
@@ -1713,7 +1882,7 @@ Comment
 \series default 
 
 \newline 
-Whatever you like to add.
+Whatever you like to add, this is ignored by Mahogany.
 \layout Itemize
 
 
@@ -1730,7 +1899,7 @@ File
 \begin_inset Quotes erd
 \end_inset 
 
-, the filename or MH directory.
+, the filename or directory where the folder is.
 \layout Itemize
 
 
@@ -1762,16 +1931,24 @@ New Mail
 
 
 \series bold 
-Keep folder always open
+Keep server connection when idle
 \series default 
 
 \newline 
-If selected, Mahogany will attempt to open the folder at program start and
- keep it open all the time.
+If selected, Mahogany will keep the folder open during the entire program
+ session after it had been opened for the first time.
  This can significantly speed up access to large folders as opening them
  can take some time.
- A very useful option for frequently used folders, such as, for example,
- the folder where you save copies of outgoing messages.
+ A very useful option for frequently used folders and Mahogany uses it by
+ default for the 
+\begin_inset Quotes eld
+\end_inset 
+
+SentMail
+\begin_inset Quotes erd
+\end_inset 
+
+ folder, for example.
 \layout Itemize
 
 
@@ -1782,31 +1959,8 @@ Force re-open on ping
 \newline 
 This forces Mahogany to close and re-open the mailbox when trying to update
  the information about it.
- This is required for some POP servers to correctly detect new mail.
+ This is required for some broken servers to correctly detect new mail.
  Usually this should not be needed.
-\layout Itemize
-
-
-\series bold 
-Use Secure Sockets Layer (SSL)
-\series default 
-
-\newline 
-This option is not always available, as the use of strong cryptography is
- outlawed in some dictatorical countries.
- If your copy of Mahogany supports SSL, tick this box to access a secure
- IMAP/POP/NNTP server.
- Must be supported by the server side, too.
- It will ensure that your communication with the server is encrypted and
- safe from eavesdropping.
- For this to work, the user might also need to open the preferences dialog,
- and, in the 
-\series bold 
-Misc
-\series default 
- tab, fill-out the boxes labeled ``Path where to find shared libssl'' and
- ``Path where to find shared libcrypto''.
- Linux users must also see the SSL section of the FAQ.
 \layout Itemize
 
 
@@ -1821,7 +1975,52 @@ This marks the folder as anonymous, such as for anonymous IMAP access, telling
 
 
 \series bold 
-Is directory
+Use Secure Sockets Layer (SSL)
+\series default 
+
+\newline 
+This option is only available if your copy of Mahogany was built with SSL
+ support.
+ Tick this box to access a secure IMAP/POP/NNTP server.
+ It must, of course, be supported by the server side, too.
+ It will ensure that your communication with the server is encrypted and
+ safe from eavesdropping.
+ For this to work, the user might also need to open the preferences dialog,
+ and, in the 
+\series bold 
+Misc
+\series default 
+ tab, fill-out the boxes labeled ``Path where to find shared libssl'' and
+ ``Path where to find shared libcrypto''.
+ Linux users must also see the SSL section of the FAQ.
+\layout Itemize
+
+
+\series bold 
+Folder can be accessed without network
+\newline 
+
+\series default 
+This option is only useful if you use Mahogany dial-up support - then check
+ it to tell Mahogany that you don't need your Internet connection (and thus
+ don't want to dial your ISP) to access this folder.
+\layout Itemize
+
+
+\series bold 
+Can be opened
+\series default 
+
+\newline 
+This is usually checked for the normal folder but may be unchecked for the
+ folders which only contain subfolders (see also below) but not any messages.
+ Normally you should allow Mahogany detect this itself, this checkbox is
+ only here to allow you to override Mahogany if it does something wrong.
+\layout Itemize
+
+
+\series bold 
+Contains subfolders
 \series default 
 
 \newline 
@@ -1829,7 +2028,9 @@ Select this if the mailbox represents not a mailbox or newsgroup but a hierarchy
  on an IMAP or NNTP server.
  E.g.
  comp.os.linux.announce would be a normal newsgroup (unticked), while comp.os.linux
- would be a new hierarchy (ticket).
+ would be a new hierarchy (ticked).
+ Normally you should allow Mahogany detect this itself, this checkbox is
+ only here to allow you to override Mahogany if it does something wrong.
 \layout Itemize
 
 
@@ -1840,6 +2041,9 @@ Hide folder in tree
 \newline 
 If you do not want this mailbox to be shown in the folder tree (unless you
  select the option to show all hidden folders), tick this box.
+ For example, if you move all new mail from your POP3 folder to your INBOX
+ you probably don't need to show POP3 folder in the tree at all so you may
+ want to hide it to save valuable screen estate.
 \layout Itemize
 
 
@@ -1850,6 +2054,7 @@ Folder subtype
 \newline 
 Here you can select some sub-type, e.g.
  different mailbox formats.
+ This option cannot be changed after the folder creation.
 \layout Itemize
 
 
@@ -2652,6 +2857,151 @@ New Mail
  Like this, you can access any mail folder on that machine that you have
  access to locally, making remote access to your mail much more flexible
  than just accessing your new messages.
+\layout Subsection
+
+Filters
+\layout Subsubsection
+
+
+\begin_inset LatexCommand \label{Filters}
+
+\end_inset 
+
+Overview
+\layout Standard
+
+Mahogany has powerful builtin filters.
+ The filters are written in a real (albeit small and specialized) programming
+ language but there is also GUI support for creating them.
+ All the existing filters appear in the dialog shown by the 
+\begin_inset Quotes eld
+\end_inset 
+
+Filters rules
+\begin_inset Quotes erd
+\end_inset 
+
+ command of the 
+\begin_inset Quotes eld
+\end_inset 
+
+Edit
+\begin_inset Quotes erd
+\end_inset 
+
+ menu.
+ You can also access the filters configured for a specific folder by selecting
+ 
+\begin_inset Quotes eld
+\end_inset 
+
+Filters
+\begin_inset Quotes erd
+\end_inset 
+
+ from the 
+\begin_inset Quotes eld
+\end_inset 
+
+Folders
+\begin_inset Quotes erd
+\end_inset 
+
+ menu.
+ The difference between these dialogs is that not all filters are associated
+ with all folder, i.e.
+ you may have two filters and two folders but the first folder can use only
+ the first filter rule and the second - only the second one.
+ The global 
+\begin_inset Quotes eld
+\end_inset 
+
+Filter rules
+\begin_inset Quotes erd
+\end_inset 
+
+ dialog allows you to manage all the filters but after creating a new one
+ you still must associate it with some folder or folders for it to be useful.
+\layout Standard
+
+After creating some filters you may go to the 
+\begin_inset Quotes eld
+\end_inset 
+
+Filters
+\begin_inset Quotes erd
+\end_inset 
+
+ dialog of the 
+\begin_inset Quotes eld
+\end_inset 
+
+Folder
+\begin_inset Quotes erd
+\end_inset 
+
+ menu (you will also have an opportunity to go directly there immediately
+ after the filter creation) and check the filters you would like to use
+ for this folder.
+ The filters are applied in the order in which they appear in the list,
+ so use the up and down buttons to arrange them as needed: the order of
+ filters is important because if one filter had decided to move a message
+ to another folder the subsequent filters won't process this message at
+ all.
+\layout Subsubsection
+
+Filter Rule Editor
+\layout Standard
+
+This dialog allows you to edit an individual filter.
+ You may use the different controls to compose it, note the 
+\begin_inset Quotes eld
+\end_inset 
+
+More
+\begin_inset Quotes erd
+\end_inset 
+
+ button which allows you to add a new condition to the rule.
+ You may notice that when you change something in the upper part of the
+ dialog, the text in the lower part is updated to reflect it: this text
+ is the source of the filter program which Mahogany will apply.
+ By experimenting with the dialog controls it should be easy to see the
+ different possibilities of this language.
+ In a few words, it is a C-like language which has several built-in functions
+ for testing for the various conditions and performing some actions.
+ All of the usual C operations are supported.
+\layout Standard
+
+You may also edit the filter program text directly but be warned that it
+ will be impossible to use the GUI controls to modify it then because they
+ are not flexible enough to be able to express an arbitrary filter program.
+\layout Subsubsection
+
+Quick Filter
+\layout Standard
+
+There is another, quicker, way to create filters as well: this is done with
+ 
+\begin_inset Quotes eld
+\end_inset 
+
+Quick filter
+\begin_inset Quotes erd
+\end_inset 
+
+ command from the 
+\begin_inset Quotes eld
+\end_inset 
+
+Message
+\begin_inset Quotes erd
+\end_inset 
+
+ menu or the popup menu displayed when you right click the message.
+ It allows to easily create filters for the most common cases.
+ Note that you may update the filter rule later using the full-fledged filter
+ edit dialog if you decide to add more conditions to it, for example.
 \layout Section
 
 Sending Mail
@@ -3592,6 +3942,204 @@ If the attempt to open a remote shell connection (used for some mail operations)
 \layout Subsubsection
 
 
+\begin_inset LatexCommand \label{NewMailPage}
+
+\end_inset 
+
+New Mail Page_4110_
+\layout Standard
+
+This page looks slightly differently in the global preferences dialog and
+ in the folder properties one as some of the settings here must be the same
+ for all folders while the others can only be set for a specific folder.
+ First here is the list of the settings which appear in the global dialog:
+\layout Itemize
+
+
+\series bold 
+Execute new mail command
+\newline 
+
+\series default 
+You may specify a command to execute when new mail is received.
+\layout Itemize
+
+
+\series bold 
+Play a sound on new mail
+\newline 
+
+\series default 
+You can select a sound file to be played on new mail reception.
+\layout Itemize
+
+
+\series bold 
+Show new mail notification
+\newline 
+
+\series default 
+If this option is on, Mahogany will show a message about the new mail in
+ the log window
+\layout Itemize
+
+
+\series bold 
+Ping folder interval
+\newline 
+
+\series default 
+This setting specifies how often should the currently opened folder(s) be
+ updated.
+ It is typically smaller than the poll interval below because it is faster
+ to check an already opened folder, especially when it is a remote folder.
+\layout Itemize
+
+
+\series bold 
+Poll interval
+\newline 
+
+\series default 
+How often should Mahogany update the mail folders which it monitors in the
+ background
+\layout Standard
+
+In addition to these settings, the folder 
+\begin_inset Quotes eld
+\end_inset 
+
+New Mail
+\begin_inset Quotes erd
+\end_inset 
+
+ properties page also proposes you the following settings:
+\layout Itemize
+
+
+\series bold 
+Configure filters
+\newline 
+
+\series default 
+This button gives you access to the filters dialog.
+ Please see the corresponding manual section (
+\begin_inset LatexCommand \ref{Filters}
+
+\end_inset 
+
+) for more details
+\layout Itemize
+
+
+\series bold 
+Collect new mail from this folder
+\newline 
+
+\series default 
+If checked, all new mail detected in this folder (either automatically or
+ manually) not handled by the filters will be copied or moved to another
+ folder, normally the central 
+\begin_inset Quotes eld
+\end_inset 
+
+New Mail
+\begin_inset Quotes erd
+\end_inset 
+
+ folder.
+ You may change the destination folder if you are in advanced user mode.
+ Of course, copying the new mail to a local folder from remote server may
+ be time consuming so it may be worth to set the filters deleting the unwanted
+ spam messages for this folder to avoid downloading them.
+\layout Itemize
+
+
+\series bold 
+Leave mail in this folder
+\newline 
+
+\series default 
+If this checkbox is checked, the new mail will be copied to the 
+\begin_inset Quotes eld
+\end_inset 
+
+New Mail
+\begin_inset Quotes erd
+\end_inset 
+
+ folder and also left in this folder.
+ Otherwise it will be moved to 
+\begin_inset Quotes eld
+\end_inset 
+
+New Mail
+\begin_inset Quotes erd
+\end_inset 
+
+ and deleted from this folder.
+\newline 
+This option is often called 
+\begin_inset Quotes eld
+\end_inset 
+
+Leave mail on server
+\begin_inset Quotes erd
+\end_inset 
+
+ in the other email clients.
+\layout Itemize
+
+
+\series bold 
+Permanently monitor this folder
+\newline 
+
+\series default 
+Choose this to tell Mahogany to poll this folder in the background periodically
+ (the interval may be set below).
+ If you leave it unset, you can still trigger new mail detection (including
+ applying filters to it and/or downloading it from server) by either opening
+ the folder or updating it (
+\begin_inset Quotes eld
+\end_inset 
+
+Open
+\begin_inset Quotes erd
+\end_inset 
+
+ and 
+\begin_inset Quotes eld
+\end_inset 
+
+Update
+\begin_inset Quotes erd
+\end_inset 
+
+ commands in the 
+\begin_inset Quotes eld
+\end_inset 
+
+Folder
+\begin_inset Quotes erd
+\end_inset 
+
+ manu respectively)
+\layout Itemize
+
+
+\series bold 
+Poll folder at startup
+\newline 
+
+\series default 
+If on, Mahogany will check for new mail in this folder immediately after
+ the program launch.
+ Of course, if you have many permanently monitored folders this can make
+ the program startup quite slow.
+\layout Subsubsection
+
+
 \begin_inset LatexCommand \label{ComposePage}
 
 \end_inset 
@@ -4436,6 +4984,18 @@ If this option is on, the log window showing all program messages will be
  displayed during program execution.
  It is advised to leave it on because the log messages (which can be saved
  to a file from the log window menu) can be valuable for the bug reports.
+\layout Itemize
+
+
+\series bold 
+Debug server and mail folder access
+\newline 
+
+\series default 
+This is another troubleshooting option: please turn it on if you experience
+ any mail-related problems (either sending or receiving).
+ It slows down the program a lot but allows to see what exactly is going
+ on between the client and the server and this can be of great help sometimes.
 \layout Itemize
 
 
@@ -6364,6 +6924,75 @@ If you only want to update your backup or to install a file or to restore
 \layout Chapter
 
 Getting Help and Support
+\layout Section
+
+Troubleshooting
+\begin_inset LatexCommand \label{Troubleshooting}
+
+\end_inset 
+
+
+\layout Standard
+
+Before asking for the help on our mailing lists, please try to see if you
+ cannot fix, or, at least, understand the reasons of, the problem yourself.
+ It is difficult to list everything which could go wrong here but here are
+ some basic recommendations:
+\layout Itemize
+
+(Unix) If the program doesn't compile, please make sure you use GNU make.
+ If it still doesn't help, please let us know about it but don't forget
+ to include the compilation errors log (if there are too many errors, there
+ is no need to include all of them, just the few first ones).
+ If the problem has happened at configure time, please look at config.log
+ file configure created and include it in your report.
+\layout Itemize
+
+(Unix) If the program crashes mysteriously please make sure you don't have
+ incompatible and/or different versions of the program sources, headers
+ and modules.
+ Also, please check that you have only one version of wxWindows installed.
+ Also, make sure to rebuild everything (ideally, create a new build directory)
+ after installing or uninstalling a new wxWindows or Mahogany version.
+ If the problem still persists, please try building the debug version of
+ the program (you need debug wxWindows library and run configure --with-debug
+ switch), run it under 
+\noun on 
+gdb
+\noun default 
+ and send us the output of 
+\begin_inset Quotes eld
+\end_inset 
+
+bt
+\begin_inset Quotes erd
+\end_inset 
+
+ command in the debugger when it crashes.
+\layout Itemize
+
+If your problem is related to receiving or sending mail, please look at
+ the message log window for possible explanation.
+ If you don't see the log window, make sure it wasn't disabled in the 
+\begin_inset Quotes eld
+\end_inset 
+
+Miscellaneous
+\begin_inset Quotes erd
+\end_inset 
+
+ (last) page of the preferences dialog - and reenable it if it was.
+ If there is nothing helpful in the log window, please turn on 
+\begin_inset Quotes eld
+\end_inset 
+
+Debug server and mailbox access
+\begin_inset Quotes erd
+\end_inset 
+
+ option in the same page.
+ It may also be useful to enable logging to a file if the program crashes
+ as the file contents,unlike the log window, is not lost in this case.
 \layout Section
 
 WWW Support
