--- a/README
+++ b/README
@@ -115,8 +115,18 @@ The recommended switches for wxWindows compilation are:
 
 (you may also use the usual --prefix switch, of course)
 
-After running configure, do "make" (or "gmake" if your make is not the GNU
-make) and "make install".
+After running configure, do "make" (or "gmake" if your make is not
+the GNU make) and "make install".
+
+If you get a message "cannot find wx-config" while compiling Mahogany
+you have to add /usr/local/bin to your PATH.
+
+If you cannot run Mahogany and get an error
+    mahogany: error while loading shared libraries:
+    libwx_gtk-2.3.so: cannot open shared object file:
+    No such file or directory
+you have to add /usr/local/lib to /etc/ld.so.conf and run
+/sbin/ldconfig.
 
 b) Mahogany
 
