--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,9 @@
       Please refer to the cvs update list archives for the even more detailed
       list of all changes.
 
+Release 0.65 '???' ??? ??, 2002
+-------------------------------------------------------------------------------
+
 Release 0.64 'Sparc' January 14, 2002
 -------------------------------------------------------------------------------
 
