--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,8 @@
 Release 0.65 '???' ??? ??, 2002
 -------------------------------------------------------------------------------
 
+24.01.02 VZ: fixed crash in Win32 install wizard if user chose to use dialup
+
 Release 0.64 'Sparc' January 14, 2002
 -------------------------------------------------------------------------------
 
