--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.65 '???' ??? ??, 2002
 -------------------------------------------------------------------------------
 
+01.02.02 VZ: added signature highlighting in the message viewer
 01.02.02 VZ: fixed bug with viewing messages embedded in embedded messages
 25.01.02 VZ: more clear options for the initial message selection
 24.01.02 VZ: fixed crash in Win32 install wizard if user chose to use dialup
