--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.65 '???' ??? ??, 2002
 -------------------------------------------------------------------------------
 
+04.03.02 VZ: added $signature template macro
 22.02.02 VZ: smarter "To" setting when replying to a message from oneself
 15.02.02 VZ: added option to disable showing external images in the HTML viewer
 13.02.02 VZ: address autocollection is a lot faster now
