1. implemented --config=filename command line option support for Windows 2. changes the profile section name handling to account for this: now we    may use either Unix or Windows-style section names under Windows

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.65 '???' ??? ??, 2002
 -------------------------------------------------------------------------------
 
+14.04.02 VZ: option to use config files under Windows (not only registry)
 14.04.02 VZ: implemented remote control of Mahogany processes
 12.04.02 VZ: updated the composer layout to be simpler in use
 29.03.02 VZ: added command line options to open the composer immediately
